# SDA_boolean_networks

./: README.md  bn_generator.py  boolean_network.py  chicken_test.sh  distance_measure.py  distance_measure_chicken.py  part2.py  perform_tests.sh  perform_tests_output  pyproject.toml  requirements.txt  trajectory_generator.py  trajectory_inference.sh
chicken_dataset/: bn_0.json  chicken_bn_0.json  chicken_bn_0_trajectories.txt
chicken_inference/: results.txt
datasets/: bn_0.json  bn_1.json  bn_11.json  bn_13.json  bn_14.json  bn_5.json  bn_6.json  bn_7.json  bn_8.json  bn_chicken.json  boolean_networks.json  chicken_network.json  freq-01-async_bn_0_trajectories.txt  freq-01-async_bn_10_trajectories.txt  freq-01-async_bn_11_trajectories.txt  freq-01-async_bn_12_trajectories.txt  freq-01-async_bn_13_trajectories.txt  freq-01-async_bn_14_trajectories.txt  freq-01-async_bn_1_trajectories.txt  freq-01-async_bn_2_trajectories.txt  freq-01-async_bn_3_trajectories.txt  freq-01-async_bn_4_trajectories.txt  freq-01-async_bn_5_trajectories.txt  freq-01-async_bn_6_trajectories.txt  freq-01-async_bn_7_trajectories.txt  freq-01-async_bn_8_trajectories.txt  freq-01-async_bn_9_trajectories.txt  freq-01-async_trajs_bn_0.json  freq-01-async_trajs_bn_1.json  freq-01-async_trajs_bn_10.json  freq-01-async_trajs_bn_11.json  freq-01-async_trajs_bn_12.json  freq-01-async_trajs_bn_13.json  freq-01-async_trajs_bn_14.json  freq-01-async_trajs_bn_2.json  freq-01-async_trajs_bn_3.json  freq-01-async_trajs_bn_4.json  freq-01-async_trajs_bn_5.json  freq-01-async_trajs_bn_6.json  (+4889 more)
(+12129 files in other folders)
